# COS401-Final-Project

./: .deepeval_telemetry.txt  .gitignore  README.md  pyproject.toml  requirements.txt
deepeval/: .deepeval  .deepeval-cache.json  .deepeval_telemetry.txt  env.py  test_chatbot.py  test_logprobs.py
src/: aime.json  env.py
src/agents/: autogen_base_agent.py  direct_call.py  langchain_base_agent.py
src/agents/reasoning/: agent.py  autogen_agent.py  crewai_agent.py  direct_call.py  langchain_agent.py  pydantic_agent.py
src/agents/structured_output/: agent.py  autogen_structured_agent.py  crewai_structured_agent.py  direct_structured_call.py  langchain_structured_agent.py  pydantic_structured_agent.py
src/coding/: calendar_interface.py  google_interface.py  gpt_o.py  unicorn.py  unicorn_reasoning.py  wikipedia_interface.py  youtube_interface.py
src/coding/outputs/robot_svg/: o4_robot.html
src/coding/outputs/space_svg/: o4_space.html
src/coding/outputs/unicorns/: 1autogen_unicorn.html  1baseline_unicorn.html  1langchain_unicorn.html  1pydantic_unicorn.html  autogen_unicorn.html  baseline_unicorn.html  crewai_unicorn.html  o3_mini_unicorn.html  (+3 more)
src/datasets/: load_gsm8k.py
src/evaluate/: eval_aime.py  eval_aime_reasoning.py  evaluate_aime.py  evaluate_gsm8k.py  utils.py
src/evaluate/coding/: eval_coding.py  eval_coding_reasoning.py  eval_coding_structured_output.py
src/evaluate/results/: aime_reasoning.txt  gsm_reasoning.txt
src/evaluate/svg_design/: space_scene.py
src/general_agents/: autogen_agent.py  crewai_agent.py  direct_call.py  langchain_agent.py  pydantic_agent.py
src/reasoning_agents/: autogen_agent.py  crewai_agent.py  direct_call.py  langchain_agent.py  pydantic_agent.py
src/svg_outputs/1_step/: autogen_space.html
src/svg_outputs/2_step/: autogen_space.html  baseline_space.html  langchain_space.html
src/svg_outputs/3_step/: crewai_space.html  langchain_space.html
src/svg_outputs/4_step/: langchain_space.html  pydantic_space.html
(+117 files in other folders)
